<resources>
    <string name="app_name">Mavties Home</string>
    <string name="home_title">Mavties</string>
    <string name="button1">Mission</string>
    <string name="button2">Vision</string>
    <string name="button3">Values</string>
    <string name="tagline">Find your UTA bestie! Help make your college experience an amazing one.</string>
    <string name="mission_statement">
        To help UTA students (mainly commuters) to make new friends based on their interests.
    </string>
    <string name="vision">Mavties are lifelong friends who gather for brunches, book clubs,
     hangouts, and obviously to study. We motivate and inspire each other and we are happier
        and healthier in sharing our personal experiences.
    </string>
    <string name="values">We value: Community Building, Loyalty, Friendship,
        Empathy, Studying, and Having Fun!
    </string>
    <string name="empty"> </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goal">The Goal: Make real connections, online or in-person.</string>
</resources>