<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bde0fe"
    android:clickable="false"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/valuesTextView"
        android:layout_width="133dp"
        android:layout_height="255dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/allerta_stencil"
        android:gravity="center"
        android:text="@string/values"
        android:textAlignment="center"
        android:textColor="#000000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ValuesButton" />

    <TextView
        android:id="@+id/visionTextView"
        android:layout_width="133dp"
        android:layout_height="255dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/allerta_stencil"
        android:gravity="center"
        android:text="@string/vision"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/missionTextView"
        app:layout_constraintTop_toBottomOf="@+id/VisionButton" />

    <Button
        android:id="@+id/ValuesButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="216dp"
        android:focusable="auto"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="openValues"
        android:text="@string/button3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#982A2A" />

    <Button
        android:id="@+id/VisionButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="216dp"
        android:focusable="auto"
        android:fontFamily="sans-serif-smallcaps"
        android:foregroundTint="#DF2727"
        android:onClick="openVision"
        android:text="@string/button2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#982A2A" />


    <Button
        android:id="@+id/MissionButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="216dp"
        android:focusable="auto"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="openMission"
        android:text="@string/button1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#982A2A" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:cropToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/sacramento"
        android:text="@string/home_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/VisionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="253dp"
        android:layout_height="84dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="23dp"
        android:clickable="false"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/tagline"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#673AB7"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/VisionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/missionTextView"
        android:layout_width="133dp"
        android:layout_height="255dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/allerta_stencil"
        android:gravity="center"
        android:text="@string/mission_statement"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MissionButton" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="34dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_2" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavigationView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:menu="@menu/bottom_navmenu"

        >

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>